@@ -53,6 +53,7 @@
 		<artifactId>log4j</artifactId> </exclusion> </exclusions> </dependency> -->
 	<!-- <dependency> <groupId>org.elasticsearch</groupId> <artifactId>elasticsearch-spark_2.10</artifactId> 
 		<version>2.1.0.Beta3</version> </dependency> -->
+
 	<dependencies>
 
 		<dependency>
@@ -108,6 +109,13 @@
 
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<argLine>-Xmx512m -XX:MaxPermSize=256m</argLine>
+				</configuration>
+			</plugin>
 			<plugin>
 				<groupId>org.scala-tools</groupId>
 				<artifactId>maven-scala-plugin</artifactId>
